--- a/reflection-config.json
+++ b/reflection-config.json
@@ -20,6 +20,11 @@
     "allPublicMethods": true
   },
   {
+    "name": "io.github.quickmsg.edge.mqtt.config.MqttConfig$SslConfig",
+    "allDeclaredConstructors": true,
+    "allPublicMethods": true
+  },
+  {
     "name": "java.util.logging.Level",
     "allDeclaredConstructors": true,
     "allPublicMethods": true,
